--- a/PrimeraVezCss/style.css
+++ b/PrimeraVezCss/style.css
@@ -1,9 +1,63 @@
-h1 {
-    background: violet;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-h1 {
-    background: red;
+body {
+    height: 100vh;
 }
-h1 small{
-    background: yellow;
+nav {
+    display: flex;
+    background-color: rgb(18, 8, 56);
+    height: 3em;
+}
+nav h1{
+    position: relative;
+    top: 13px;
+    left: 5.7em;
+    color: #fff;
+
+}
+nav ul {
+    position: relative;
+    top: 0;
+    left: 29.5%;
+    bottom: 0;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+    color: #fff;
+    list-style: none;
+}
+a {
+    color: #fff;
+    text-decoration: none;
+}
+article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-image: url(assets/2.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 93.4vh;
+    color: #fff;
+}
+article div {
+    text-align: center;
+}
+article div h1{
+    margin-bottom: 10px;
+}
+p {
+    text-align: center;
+    margin: 10px 0;
+    font-size: 18px;
+}
+button {
+    margin-top: 10px;
+    font-size: 18px;
+    color: #000;
 }
